Adds original download capability
Also adds a basic capabilities framework.

Closes #551
Closes #491
