# swagger/v2/swagger.yaml
@@ -960,7 +960,7 @@ paths:
                   See https://docs.microsoft.com/en-us/powershell/scripting/install/installing-powershell?view=powershell-7.1
                   for installation instructions.
 
-                  Version 4.9.0 from http://localhost:3000.
+                  Version 4.9.1 from http://localhost:3000.
 
                 .EXAMPLE
 
@@ -994,8 +994,10 @@ paths:
 
                 $InformationPreference = 'Continue'
                 $ErrorActionPreference = 'Stop'
+                # https://github.com/PowerShell/PowerShell/issues/14348
+                $ProgressPreference = 'SilentlyContinue'
 
-                Write-Information "Acoustic Workbench downloader script version 4.9.0"
+                Write-Information "Acoustic Workbench downloader script version 4.9.1"
 
                 if ($null -eq $target) {
                   $target = $pwd
@@ -1018,7 +1020,7 @@ paths:
 
                 if ($null -eq $filter) {
                   $filter = @'
-                {"sorting":{"order_by":"recorded_date","direction":"desc"},"paging":{"items":25},"projection":{"include":["id","recorded_date","sites.name","site_id","canonical_file_name"]}}
+                {"sorting":{"order_by":"recorded_date","direction":"desc"},"capabilities":{"original_download":{"can_item":{},"details":{}}},"paging":{"items":25},"projection":{"include":["id","recorded_date","sites.name","site_id","canonical_file_name"]}}
                 '@
                 }
                 Write-Information "Filter: $filter"
@@ -1161,7 +1163,7 @@ paths:
                   See https://docs.microsoft.com/en-us/powershell/scripting/install/installing-powershell?view=powershell-7.1
                   for installation instructions.
 
-                  Version 4.9.0 from http://localhost:3000.
+                  Version 4.9.1 from http://localhost:3000.
 
                 .EXAMPLE
 
@@ -1195,8 +1197,10 @@ paths:
 
                 $InformationPreference = 'Continue'
                 $ErrorActionPreference = 'Stop'
+                # https://github.com/PowerShell/PowerShell/issues/14348
+                $ProgressPreference = 'SilentlyContinue'
 
-                Write-Information "Acoustic Workbench downloader script version 4.9.0"
+                Write-Information "Acoustic Workbench downloader script version 4.9.1"
 
                 if ($null -eq $target) {
                   $target = $pwd
@@ -1219,7 +1223,7 @@ paths:
 
                 if ($null -eq $filter) {
                   $filter = @'
-                {"sorting":{"order_by":"recorded_date","direction":"desc"},"paging":{"items":25},"projection":{"include":["id","recorded_date","sites.name","site_id","canonical_file_name"]}}
+                {"sorting":{"order_by":"recorded_date","direction":"desc"},"capabilities":{"original_download":{"can_item":{},"details":{}}},"paging":{"items":25},"projection":{"include":["id","recorded_date","sites.name","site_id","canonical_file_name"]}}
                 '@
                 }
                 Write-Information "Filter: $filter"
@@ -1364,6 +1368,12 @@ paths:
                     current: http://localhost:3000/audio_recordings?direction=desc&items=25&order_by=recorded_date&page=1
                     previous: 
                     next: 
+                  capabilities:
+                    original_download:
+                      can: 
+                      details: You do not have permission to download the original
+                        audio recording. Check your access level or the original download
+                        settings for this project
                 data:
                 - id: 20
                   uuid: 1eb68505-5f9b-4678-a876-3f0d7de1cfd9
@@ -1427,6 +1437,10 @@ paths:
                 meta:
                   status: 200
                   message: OK
+                  capabilities:
+                    original_download:
+                      can: true
+                      details: 
                 data:
                   id: 21
                   uuid: e046e7be-1a16-4610-9882-e8daebb6576a
@@ -1492,6 +1506,10 @@ paths:
                 meta:
                   status: 200
                   message: OK
+                  capabilities:
+                    original_download:
+                      can: true
+                      details: 
                 data:
                   id: 22
                   uuid: ce43bb99-420c-455a-937a-d42459933bc9
@@ -1552,6 +1570,10 @@ paths:
                 meta:
                   status: 200
                   message: OK
+                  capabilities:
+                    original_download:
+                      can: true
+                      details: 
                 data:
                   id: 23
                   uuid: d05c1bb9-2687-440a-86b4-6ec3c91d88e4
@@ -1658,6 +1680,12 @@ paths:
                     current: http://localhost:3000/audio_recordings/filter?direction=desc&items=25&order_by=recorded_date&page=1
                     previous: 
                     next: 
+                  capabilities:
+                    original_download:
+                      can: 
+                      details: You do not have permission to download the original
+                        audio recording. Check your access level or the original download
+                        settings for this project
                 data:
                 - id: 25
                   uuid: 4f97f45e-080c-4d10-bba7-e52696d9d320
@@ -2588,8 +2616,8 @@ paths:
                   deleter_id: 
                   deleted_at: 
                   region_id: 41
-                  custom_latitude: 84.710449
-                  custom_longitude: 29.079889
+                  custom_latitude: -58.800399
+                  custom_longitude: -105.25982
                   location_obfuscated: false
                   project_ids:
                   - 44
@@ -2672,8 +2700,8 @@ paths:
                   deleter_id: 
                   deleted_at: 
                   region_id: 42
-                  custom_latitude: -14.842749
-                  custom_longitude: -84.341464
+                  custom_latitude: -81.25144
+                  custom_longitude: 179.016037
                   location_obfuscated: false
                   project_ids:
                   - 45
@@ -2792,9 +2820,13 @@ paths:
                 meta:
                   status: 201
                   message: Created
+                  capabilities:
+                    original_download:
+                      can: true
+                      details: 
                 data:
                   id: 44
-                  uuid: 3fb2905b-13aa-45c9-ac89-0b2b78adbb28
+                  uuid: 1290bdb5-cee1-4b3b-b63f-b2905b13aab5
                   recorded_date: '2012-05-09T07:06:59.000Z'
                   site_id: 44
                   duration_seconds: 60000.0
@@ -2812,7 +2844,7 @@ paths:
                   updater_id: 
                   notes:
                     test: note number 44
-                  file_hash: SHA256::44jkovp9n9ngw1reb1c1qlj92r3fwgylwhapa62qimj6mjgg3yvip0mpzki73bp5
+                  file_hash: SHA256::44uhiaijkovp9n9ngw1reb1c1qlj92r3fwgylwhapa62qimj6mjgg3yvip0mpzki
                   uploader_id: 1
                   original_file_name: original name 44.mp3
                   canonical_file_name: 20120509T070659Z_site-name-46_44.mp3
@@ -5639,6 +5671,20 @@ components:
       - Reader
       - 
     meta:
+      properties:
+        capabilities:
+          type: object
+          items:
+            type: object
+            properties:
+              can:
+                type:
+                - 'null'
+                - boolean
+              details:
+                type: string
+            required:
+            - can
       type: object
     meta_error:
       type: object
